--- a/lake_home.html
+++ b/lake_home.html
@@ -14,6 +14,8 @@
    -->
    <meta charset="utf-8" />
    <title>Great Lakescape Lodge</title> 
+   <link href="lake_layout.css" rel="stylesheet"/>
+   <link href="lake_styles.css" rel="stylesheet"/>
 
 </head>
 
